# gcp-multi-cluster-demo

./: .gitignore  CLAUDE.md  README.md
demo-ui/: README.md  app.py  run-demo.sh  start-portforward.sh
demo-ui/.streamlit/: config.toml
docs/: architecture.md
k8s/c1/: accounts-db.yaml  config.yaml  cross-cluster-services.yaml  frontend.yaml  loadgenerator.yaml  namespace.yaml  network-policy.yaml
k8s/c2/: balancereader.yaml  config.yaml  contacts.yaml  ledger-db.yaml  ledgerwriter.yaml  namespace.yaml  network-policy.yaml  transactionhistory.yaml  userservice.yaml
k8s/common/: default-deny-policy.yaml  jwt-secret.yaml  namespace.yaml
observability/dashboards/: cross-cluster-metrics.json
observability/grafana/: errors-dashboard.yaml  grafana-dashboards-cm.yaml  grafana-datasource.yaml  grafana-deploy.yaml  loki-dashboard.yaml
observability/loki/: loki-deployment.yaml  promtail-daemonset.yaml
observability/prometheus/: kube-state-metrics.yaml  monitoring-network-policy.yaml  prometheus-config.yaml  prometheus-deploy.yaml  prometheus-rbac.yaml
scripts/: cleanup.sh  configure-contexts.sh  deploy-apps.sh  deploy-infra.sh  restore-access.sh  revoke-access.sh  setup.sh
terraform/: firewall.tf  gke.tf  iam.tf  main.tf  outputs.tf  static-ips.tf  terraform.tfvars.example  tfplan  variables.tf  vpc.tf
terraform/autoapply/: pyproject.toml
terraform/autoapply/src/: __init__.py  config.py  models.py
verification/: README.md  config.yaml  requirements.txt  verify.py
verification/checks/: __init__.py  connectivity.py  network_policy.py  security_posture.py
